--- a/FixtureFinder.csproj
+++ b/FixtureFinder.csproj
@@ -212,8 +212,6 @@
     <Compile Include="Models\Football Fixtures\FixtureRetriever.cs" />
     <Compile Include="Models\default stuff\IdentityModels.cs" />
     <Compile Include="Models\default stuff\ManageViewModels.cs" />
-    <Compile Include="Models\WeatherApi\WeatherForecaster.cs" />
-    <Compile Include="Models\WeatherApi\WeatherJSONParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StadiumInfo.cs">
       <DependentUpon>FixtureFinderEntities.tt</DependentUpon>
@@ -1097,6 +1095,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\WeatherApi\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
